# sendungsbewusstsein

./: .gitignore  .gitmodules  CMakeLists.txt  DOCUMENTATION.md  README.md
include/: BitUtils.h  CharacteristicAbstract.h  CharacteristicCyclingPowerControlPoint.h  CharacteristicCyclingPowerMeasurement.h  CharacteristicCyclingSpeedCadence.h  CharacteristicFitnessMachineControlPoint.h  CharacteristicHeartRateMeasurment.h  CharacteristicIndoorBikeData.h  CharacteristicsFactory.h  CharacteristicsGATT.h  Console.h  Device.h  DeviceWHOOP4.h  DeviceWahooKICKR.h  Feature.h  HeartBeat.h  MOscPacketListener.h  OSCListener.h  OscManager.h  OscSenderReceiver.h  Sendungsbewusstsein.h  SendungsbewusstseinDefines.h  StringUtils.h  Transceiver.h  TransceiverCommandHandler.h  Watchdog.h  main.h  utils.hpp
libraries/oscpack/include/ip/: IpEndpointName.h
libraries/oscpack/include/osc/: OscReceivedElements.h  OscTypes.h
libraries/simpleble/: CMakeLists.txt
libraries/simpleble/cmake/: prelude.cmake
libraries/simpleble/examples/simpleble/: CMakeLists.txt
libraries/simpleble/examples/simpleble/cpp/wahoo/: CMakeLists.txt  wahoo.cpp
libraries/simpleble/simpleble/: CMakeLists.txt
libraries/simpleble/simpleble/src/backends/macos/: PeripheralBaseMacOS.mm
oscpack/include/osc/: OscOutboundPacketStream.h  OscReceivedElements.h
oscpack/src/ip/: IpEndpointName.cpp
research/: Services + Capabilites Explanations.md  Understanding Bluetooth Services "Cycling Power" + "Fitness Machine".md
simpleble/test/: connect.cpp
src/: Console.cpp  MOscPacketListener.cpp  OSCListener.cpp  OscManager.cpp  OscSenderReceiver.cpp  StringUtils.cpp  Transceiver.cpp  TransceiverNull.cpp  TransceiverOSC.cpp  main.cpp  utils.cpp
tools/: Sendungsbewusstsein.pde
tools/ConnectHeartRateMonitor/: ConnectHeartRateMonitor.pde
tools/HeartRateMonitor/: HeartRateMonitor.pde
tools/IndoorBikeDataVisualizer/: IndoorBikeDataVisualizer.pde
tools/OSCMonitor/: OSCMonitor.pde
tools/SmartTrainer/: SmartTrainer.pde
